<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:title="Home"
        android:layout_height="56dp"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:elevation="4dp"
/>
    <android.support.v4.widget.SwipeRefreshLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/homeSwipeLayout"
        android:gravity="top"
        android:layout_below="@+id/toolbar"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.v7.widget.RecyclerView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/rv"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_gravity="top">
        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>