...
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:hint="Project Title"
        android:ems="10"
        android:layout_marginStart="24dp"
        android:layout_marginTop="29dp"
        android:id="@+id/project_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
